--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://MilanC994.github.io/SearchMovies/",
   "name": "moviesOrTVShowsapp",
   "version": "0.1.0",
   "private": true,
