--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "immer": "^5.3.6",
+    "lodash": "^4.17.20",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
