--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "homepage": "https://MilanC994.github.io/SearchMovies/",
+  "homepage": "https://MilanC994.github.io/tv-shows",
   "name": "moviesOrTVShowsapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.1",
     "@testing-library/user-event": "^7.2.1",
+    "@types/lodash": "^4.14.164",
+    "@types/lodash.debounce": "^4.0.6",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.55",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/redux": "^3.6.0",
+    "@types/redux-mock-store": "^1.0.2",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "immer": "^5.3.6",
@@ -17,7 +25,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "predeploy": "npm run build",
