pkg json and require

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "https://MilanC994.github.io/tv-shows",
-  "name": "moviesOrTVShowsapp",
+  "name": "moviesortvshows",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
